# ipf-netcfgbu

./: .pre-commit-config.yaml  Makefile  README.md  ipfnetcfgbu.toml  pyproject.toml  requirements.txt  setup.py  tox.ini
ipfnetcfgbu/: config.py  config_model.py  consts.py  domain_remover.py  ipf.py  log.py  logging.py
ipfnetcfgbu/cli/: backup.py  main.py  root.py  vcs.py
ipfnetcfgbu/vcs/: git.py
