[tool.poetry]
name = "ipf-netcfgbu"
version = "1.0.0"
description = "Network Config Backup from IP Fabric to Git"
authors = ["Jeremy Schulman <nwkautomaniac@gmail.com>"]
packages = [
    { include = "ipfnetcfgbu" },
]
license = "Apache-2.0"

[tool.poetry.scripts]
    ipf-netcfgbu = "ipfnetcfgbu.cli.main:run"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
toml = "^0.10.2"
pydantic = "^1.10.2"
pexpect = "^4.8.0"
click = "^8.1.3"
first = "^2.0.2"
aio-ipfabric = "^1.0.0"
maya = "^0.6.1"
aiofiles = "^22.1.0"

[tool.poetry.group.dev.dependencies]
invoke = "^1.7.3"
black = "^22.12.0"
flake8 = "^6.0.0"
pre-commit = "^2.20.0"
interrogate = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.interrogate]
    fail-under = 100
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["tasks.py", "examples", "build", "venv"]

[tool.black]
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | tasks.py
)
'''
